--- a/src/app/favorites/favorites.component.scss
+++ b/src/app/favorites/favorites.component.scss
@@ -5,3 +5,6 @@
   table {
     width: 100%;
   }
+  .toolbar {
+    justify-self: flex-end;
+  }
